# libsid

./: .gitignore  CMakeLists.txt  README.md  example  main.c  notes  oscillator.c  oscillator.h  spec.md  symbol.c  symbol.h
.cache/clangd/index/: main.c.9126A085ACBC97C6.idx  oscillator.c.886AE023735CFF3E.idx  oscillator.h.E2134D609C4F69AB.idx  sequencer.c.F337C05CE9668755.idx  sequencer.h.7ABC5545A7308089.idx  symbol.c.7080D3B9D7E268DA.idx  symbol.h.2029E3FF29092AB4.idx  track.c.B628E2C434662338.idx  track.h.B3ED44E99150F353.idx  utils.c.6215CA311FFE48D1.idx  utils.h.C3F224D959D6E28E.idx
.github/workflows/: build-and-test.yml
docs/: spec-v0.md
examples/: example
fixtures/: example
src/: filter.h  oscillator.c  oscillator.h  parser.c  parser.h  sequencer.c  sequencer.h  symbol.c  symbol.h  track.c  track.h  utils.c  utils.h
src/cli/: main.c
src/lib/: note.c  note.h  oscillator.c  oscillator.h  oscillator.test.c  sequencer.c  sequencer.h  sequencer.test.c  symbol.c  symbol.h  track.c  track.h  track.test.c  tune.c  tune.h  utils.c  utils.h
src/lib/parser/: parser.h  parser.test.c  symbol.c  symbol.h  symbol.test.c
src/lib/synth/: oscillator.c  oscillator.test.c  sequencer.c  sequencer.h  sequencer.test.c  track.test.c  tune.h  utils.h
src/parser/: error.c  error.h  parser.c  parser.h  parser.test.c  symbol.c  symbol.h  symbol.test.c
test/: test.c  test.h
